tempfile/impl-trait-for-tuples/tests/ui/missing_arguments_to_macro.stderr
error: Expected at least one argument to the macro!
 --> tests/ui/missing_arguments_to_macro.rs:1:1
  |
1 | #[impl_trait_for_tuples::impl_for_tuples()]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `impl_trait_for_tuples::impl_for_tuples` (in Nightly builds, run with -Z macro-backtrace for more info)
