tempfile/impl-trait-for-tuples/tests/ui/missing_arguments_to_macro.rs
#[impl_trait_for_tuples::impl_for_tuples()]
trait Test {}

fn main() {}
